--- a/paper read/reference.bib
+++ b/paper read/reference.bib
@@ -740,6 +740,22 @@
   eventtitle = {Proceedings of the {{IEEE International Conference}} on {{Computer Vision}}}
 }
 
+@inproceedings{kupyn2018deblurgan,
+  title = {Deblurgan: {{Blind}} Motion Deblurring Using Conditional Adversarial Networks},
+  booktitle = {Proceedings of the {{IEEE}} Conference on Computer Vision and Pattern Recognition},
+  author = {Kupyn, Orest and Budzan, Volodymyr and Mykhailych, Mykola and Mishkin, Dmytro and Matas, Jiří},
+  date = {2018},
+  pages = {8183--8192}
+}
+
+@inproceedings{kupyn2019deblurgan,
+  title = {Deblurgan-v2: {{Deblurring}} (Orders-of-Magnitude) Faster and Better},
+  booktitle = {Proceedings of the {{IEEE}}/{{CVF}} International Conference on Computer Vision},
+  author = {Kupyn, Orest and Martyniuk, Tetiana and Wu, Junru and Wang, Zhangyang},
+  date = {2019},
+  pages = {8878--8887}
+}
+
 @inproceedings{li_gan_2020,
   title = {Gan Compression: {{Efficient}} Architectures for Interactive Conditional Gans},
   booktitle = {Proceedings of the {{IEEE}}/{{CVF}} Conference on Computer Vision and Pattern Recognition},
@@ -850,6 +866,14 @@
   date = {2017},
   pages = {3883--3891},
   file = {C\:\\Users\\Administrator\\Zotero\\storage\\U7NVLTQ6\\Nah_Deep_Multi-Scale_Convolutional_CVPR_2017_paper.pdf}
+}
+
+@inproceedings{nah2017deep,
+  title = {Deep Multi-Scale Convolutional Neural Network for Dynamic Scene Deblurring},
+  booktitle = {Proceedings of the {{IEEE}} Conference on Computer Vision and Pattern Recognition},
+  author = {Nah, Seungjun and Hyun Kim, Tae and Mu Lee, Kyoung},
+  date = {2017},
+  pages = {3883--3891}
 }
 
 @inproceedings{nah2019recurrent,
