修改文献库

--- a/paper read/reference.bib
+++ b/paper read/reference.bib
@@ -697,6 +697,14 @@
   date = {2022-07}
 }
 
+@inproceedings{isola2017image,
+  title = {Image-to-Image Translation with Conditional Adversarial Networks},
+  booktitle = {Proceedings of the {{IEEE}} Conference on Computer Vision and Pattern Recognition},
+  author = {Isola, Phillip and Zhu, Jun-Yan and Zhou, Tinghui and Efros, Alexei A},
+  date = {2017},
+  pages = {1125--1134}
+}
+
 @inproceedings{jin_noise-blind_2017,
   title = {Noise-Blind Image Deblurring},
   author = {Jin, Meiguang and Roth, Stefan and Favaro, Paolo},
