修改文献库

--- a/paper read/reference.bib
+++ b/paper read/reference.bib
@@ -1253,6 +1253,28 @@
   doi = {10.1109/LGRS.2021.3068271}
 }
 
+@article{zhang2018adversarial,
+  title = {Adversarial Spatio-Temporal Learning for Video Deblurring},
+  author = {Zhang, Kaihao and Luo, Wenhan and Zhong, Yiran and Ma, Lin and Liu, Wei and Li, Hongdong},
+  date = {2018},
+  journaltitle = {IEEE Transactions on Image Processing},
+  volume = {28},
+  number = {1},
+  pages = {291--301},
+  publisher = {{IEEE}}
+}
+
+@article{zhang2018adversarial,
+  title = {Adversarial Spatio-Temporal Learning for Video Deblurring},
+  author = {Zhang, Kaihao and Luo, Wenhan and Zhong, Yiran and Ma, Lin and Liu, Wei and Li, Hongdong},
+  date = {2018},
+  journaltitle = {IEEE Transactions on Image Processing},
+  volume = {28},
+  number = {1},
+  pages = {291--301},
+  publisher = {{IEEE}}
+}
+
 @inproceedings{zhou2019spatio,
   title = {Spatio-Temporal Filter Adaptive Network for Video Deblurring},
   booktitle = {Proceedings of the {{IEEE}}/{{CVF}} International Conference on Computer Vision},
