修改文献库

--- a/paper read/reference.bib
+++ b/paper read/reference.bib
@@ -683,6 +683,15 @@
   pages = {2563--2566}
 }
 
+@inproceedings{hu_deblurring_2014,
+  title = {Deblurring Low-Light Images with Light Streaks},
+  booktitle = {Proceedings of the {{IEEE Conference}} on {{Computer Vision}} and {{Pattern Recognition}}},
+  author = {Hu, Zhe and Cho, Sunghyun and Wang, Jue and Yang, Ming-Hsuan},
+  date = {2014},
+  pages = {3382--3389},
+  file = {C\:\\Users\\Administrator\\Zotero\\storage\\AYG95RD2\\Hu 等 - 2014 - Deblurring low-light images with light streaks.pdf}
+}
+
 @inproceedings{hyun2017online,
   title = {Online Video Deblurring via Dynamic Temporal Blending Network},
   booktitle = {Proceedings of the {{IEEE}} International Conference on Computer Vision},
@@ -987,6 +996,16 @@
   file = {C\:\\Users\\Administrator\\Zotero\\storage\\9YJNQPEK\\Setyaningsih 和 Harjoko - 2017 - Survey of hybrid image compression techniques.pdf}
 }
 
+@article{sharif_darkdeblur_2023,
+  title = {{{DarkDeblur}}: {{Learning}} Single-Shot Image Deblurring in Low-Light Condition},
+  author = {family=Sharif, given=SMA, given-i=SMA and Naqvi, Rizwan Ali and Ali, Farman and Biswas, Mithun},
+  date = {2023},
+  journaltitle = {Expert Systems with Applications},
+  pages = {119739},
+  publisher = {{Elsevier}},
+  file = {C\:\\Users\\Administrator\\Zotero\\storage\\GTYBJW9V\\Sharif 等 - 2023 - DarkDeblur Learning single-shot image deblurring .pdf}
+}
+
 @inproceedings{shen2018deep,
   title = {Deep Semantic Face Deblurring},
   booktitle = {Proceedings of the {{IEEE}} Conference on Computer Vision and Pattern Recognition},
@@ -1273,6 +1292,15 @@
   number = {1},
   pages = {291--301},
   publisher = {{IEEE}}
+}
+
+@inproceedings{zhou_delieve-net_2021,
+  title = {{{DeLiEve-Net}}: Deblurring Low-Light Images with Light Streaks and Local Events},
+  booktitle = {Proceedings of the {{IEEE}}/{{CVF International Conference}} on {{Computer Vision}}},
+  author = {Zhou, Chu and Teng, Minggui and Han, Jin and Xu, Chao and Shi, Boxin},
+  date = {2021},
+  pages = {1155--1164},
+  file = {C\:\\Users\\Administrator\\Zotero\\storage\\2XE5UBGR\\Zhou 等 - 2021 - DeLiEve-Net deblurring low-light images with ligh.pdf}
 }
 
 @inproceedings{zhou2019spatio,
